[ADD] estate_ffb: #830 add sequence number to estate.ffb models, add constraint on clerk_id so there are not multi form with same clerk_id. [REF] estate_ffbpayroll: #829 move estate_ffbpayroll to Harvest parent menu.

--- a/estate_payrollffb/views/estate_ffbpayroll_view.xml
+++ b/estate_payrollffb/views/estate_ffbpayroll_view.xml
@@ -148,7 +148,7 @@
         </record>
 
         <menuitem id="estate_harvest" name="Daily Harvest Labour"
-                  parent="estate.estate_operation_menu"
+                  parent="estate_ffb.estate_harvest_menu"
                   action="action_list_harvest"
                   groups="estate.group_user"/>
     </data>
