[ADD] estate_ffb: #845 - security & demo data
There is no demo data provided. Setup separate group of user. Kerani Panen
and Kerani Data should not hold by single user. Fix security to allow Kerani Panen
accessing estate block template (read & create) and planted year. Make sure to put
no_create_edit at every block_id.

[FIX] estate_payrollffb: #846 security

It didn't depends to estate. Module estate_payroll had estate dependency already. Fix menu and ACL.

[FIX] estate: wrong object name

Unable to view object name - no _description found.

[ADD] no module icon

Module: base_indonesia, budget_indonesia, estate_planning, estate_planting (+1 squashed commit)
Squashed commits:
[7885b1c] [ADD] estate_payrollffb: no module icon

--- a/estate_ffb/views/estate_ffb_view.xml
+++ b/estate_ffb/views/estate_ffb_view.xml
@@ -124,8 +124,8 @@
                                         <field name="employee_id" string="Employee" options="{'no_create_edit': True}"/>
                                         <field name="employee_nik" string="NIK" readonly="True"/>
                                         <field name="block_id" string="Block" invisible="1"/>
-                                        <field name="location_id" string="Block"/>
-                                        <field name="planted_year_id" string="PY"/>
+                                        <field name="location_id" string="Block" options="{'no_create_edit': True}"/>
+                                        <field name="planted_year_id" string="PY" readonly="True"/>
                                         <field name="tph_id" string="TPH" options="{'no_create_edit': True}"/>
                                         <field name="qty_n" string="N" sum="N"/>
                                         <field name="qty_a" string="A" sum="A"/>
@@ -157,11 +157,11 @@
         <menuitem id="estate_harvest_menu" name="Harvest"
                   parent="estate.main_estate_menu"
                   sequence="11"
-                  groups="estate.group_user" />
+                  groups="estate_ffb.group_ffb_user" />
 
         <menuitem id="estate_ffb" name="Daily Harvest"
                   parent="estate_harvest_menu"
                   action="action_list_ffb"
-                  groups="estate.group_user" />
+                  groups="estate_ffb.group_ffb_user" />
     </data>
 </openerp>
