--- a/estate_payrollffb/views/estate_payrollffb_views.xml
+++ b/estate_payrollffb/views/estate_payrollffb_views.xml
@@ -3,12 +3,12 @@
     <data noupdate="0">
         <!-- Estate FFB Payroll -->
         <record id="ffb_view_search" model="ir.ui.view">
-            <field name="name">Daily Harvest Search</field>
-            <field name="model">estate.harvest</field>
+            <field name="name">Daily Payroll FFB Search</field>
+            <field name="model">estate.payrollffb</field>
             <field name="priority" eval="1"/>
             <field name="arch" type="xml">
                 <search default_order="date desc">
-                    <field name="name" string="Daily Harvest"/>
+                    <field name="name" string="Daily Payroll FFB"/>
                     <field name="team_id"/>
                     <field name="division_id"/>
                     <separator/>
@@ -54,8 +54,8 @@
         </record>
 
         <record id="ffb_view_tree" model="ir.ui.view" >
-            <field name="name">Daily Harvest Tree</field>
-            <field name="model">estate.harvest</field>
+            <field name="name">Daily Payroll FFB Tree</field>
+            <field name="model">estate.payrollffb</field>
             <field name="priority" eval="1"/>
             <field name="arch" type="xml">
                 <tree colors="red:state in ('draft','confirmed')" default_order="date desc">
@@ -71,11 +71,11 @@
         </record>
 
         <record id="ffb_view_form" model="ir.ui.view" >
-            <field name="name">Daily Harvest</field>
-            <field name="model">estate.harvest</field>
+            <field name="name">Daily Payroll FFB</field>
+            <field name="model">estate.payrollffb</field>
             <field name="priority" eval="1"/>
             <field name="arch" type="xml">
-                <form string="Daily Harvest">
+                <form string="Daily Payroll FFB">
                     <header>
                         <button class="oe_highlight" name="button_confirmed" string="Confirmed"
                                 type="object" states="draft" groups="estate.group_assistant"/>
@@ -86,10 +86,10 @@
                         <field name="state" widget="statusbar"
                                statusbar_visible="draft,agr_asst_approved,agr_head_approved,estate_mgr_approved,approved"/>
                     </header>
-                    <sheet string="Daily Harvest">
+                    <sheet string="Daily Payroll FFB">
                         <div class="oe_title">
-                            <label string="Harvest Draft " attrs="{'invisible': [('state','!=','draft')]}"/>
-                            <label string="Harvest " attrs="{'invisible': [('state','=', 'draft')]}"/>
+                            <label string="Payroll FFB Draft " attrs="{'invisible': [('state','!=','draft')]}"/>
+                            <label string="Payroll FFB " attrs="{'invisible': [('state','=', 'draft')]}"/>
                             <h1>
                                 <field name="name" readonly="1"/>
                             </h1>
@@ -97,8 +97,6 @@
                         <group>
                             <group name="team_work">
                                 <field name="date" attrs="{'readonly': [('state','not in',('draft','confirmed'))]}"/>
-                                <field name="is_friday" readonly="True"/>
-                                <field name="is_holiday" readonly="True"/>
                                 <field name="team_id" string="Team" options="{'no_create_edit': True}"
                                        attrs="{'readonly': [('state','not in',('draft','confirmed'))]}"/>
                                 <field name="approver_id" options="{'no_create_edit': True}" readonly="True"/>
@@ -113,15 +111,16 @@
                             </group>
                         </group>
                         <notebook>
-                            <page string="Harvest Labour">
-                                <!-- <field name="team_member_ids" widget="selection" string="Harvester"/> --> 
-                                <field name="harvest_labour_ids" attrs="{'readonly': [('state','not in',('draft','confirmed'))]}">
+                            <page string="Payroll FFB Labour">
+                                <!-- <field name="team_member_ids" widget="selection" string="Payroll FFBer"/> -->
+                                <field name="labour_line_ids" attrs="{'readonly': [('state','not in',('draft','confirmed'))]}">
                                     <tree editable="True" >
-                                        <field name="harvest_id" invisible="1"/>
+                                        <field name="payrollffb_id" invisible="1"/>
                                         <field name="division_id" invisible="1"/>
                                         <field name="employee_id" string="Employee" options="{'no_create_edit': True}"/>
                                         <field name="employee_nik" string="NIK" readonly="True"/>
                                         <field name="attendance_code_id" string="Attendance" options="{'no_create_edit': True}"/>
+                                        <field name="cross_team" string="CT"/>
                                         <field name="location_id" string="Block" options="{'no_create_edit': True}"/>
                                         <field name="planted_year_id" string="PY" readonly="True"/>
                                         <field name="qty_ffb" sum="qty_ffb"/>
@@ -140,16 +139,16 @@
             </field>
         </record>
         
-        <record id="action_list_harvest" model="ir.actions.act_window" >
-            <field name="name">Daily Harvest Labour</field>
-            <field name="res_model">estate.harvest</field>
+        <record id="action_list_payrollffb" model="ir.actions.act_window" >
+            <field name="name">Daily Payroll FFB Labour</field>
+            <field name="res_model">estate.payrollffb</field>
             <field name="view_mode">tree,form</field>
             <field name="context">{'search_default_filter_new': 1}</field>
         </record>
 
-        <menuitem id="estate_harvest" name="Daily Harvest Labour"
+        <menuitem id="estate_payrollffb" name="Daily Payroll FFB Labour"
                   parent="estate_ffb.estate_harvest_menu"
-                  action="action_list_harvest"
+                  action="action_list_payrollffb"
                   groups="estate_ffb.group_ffb_user"/>
     </data>
 </openerp>
