--- a/estate_payrollffb/views/estate_payrollffb_views.xml
+++ b/estate_payrollffb/views/estate_payrollffb_views.xml
@@ -146,7 +146,9 @@
                                         <field name="location_id" string="Block" options="{'no_create_edit': True}"/>
                                         <field name="planted_year_id" string="PY" readonly="True"/>
                                         <field name="qty_ffb" sum="qty_ffb"/>
+                                        <field name="qty_ffb_clerk" sum="qty_ffb" readonly="True"/>
                                         <field name="qty_loose_ffb" sum="qty_loose_ffb"/>
+                                        <field name="qty_loose_ffb_clerk" sum="qty_loose_ffb_clerk" readonly="True"/>
                                         <field name="qty_penalty" sum="qty_penalty"/>
                                     </tree>
                                 </field>
