[ADD] estate_payrollffb: #835 add workflow to estate_payrollffb for group agronomy assistant and estate manager. [ADD] estate_ffb: #834 add workflow to estate_ffb for group agronomy assistant.

--- a/estate_ffb/views/estate_ffb_detail_views.xml
+++ b/estate_ffb/views/estate_ffb_detail_views.xml
@@ -101,6 +101,7 @@
         <menuitem id="estate_harvester_summary" name="Harvester Summary"
                   parent="estate_harvest_menu"
                   action="action_list_harvester_summary"
+                  sequence="25"
                   groups="estate_ffb.group_ffb_user" />
     </data>
 </openerp>
