--- a/estate_ffb/views/estate_ffb_view.xml
+++ b/estate_ffb/views/estate_ffb_view.xml
@@ -65,7 +65,7 @@
                     <field name="team_ids"/>
                     <field name="division_id"/>
                     <field name="approver_id"/>
-                    <field name="state" invisible="True"/>
+                    <field name="state" invisible="False"/>
                 </tree>
             </field>
         </record>
@@ -77,12 +77,31 @@
             <field name="arch" type="xml">
                 <form string="FFB">
                     <header>
-                        <button class="oe_highlight" name="button_confirmed" string="Confirmed"
-                                type="object" states="draft" groups="estate.group_assistant"/>
-                        <button class="oe_highlight" name="button_approved" string="Approved"
-                                type="object" states="confirmed" groups="estate.group_manager"/>
-                      	<button class="oe_highlight" name="button_rejected" string="Rejected"
-                                type="object" states="confirmed" groups="estate.group_assistant"/>
+                        <button name="button_reconfirm" type="workflow"
+                                string="Set To Confirmed" states="approved,rejected"
+                                groups="estate.group_manager"
+                                class="oe_highlight"
+                                confirm="Are you sure to set this FFB to Confirmed?"/>
+                        <button name="button_redraft" type="workflow"
+                                string="Set To Draft" states="confirmed"
+                                groups="estate.group_manager"
+                                class="oe_highlight"
+                                confirm="Are you sure to set this FFB to Draft?"/>
+                        <button name="button_confirm" type="workflow"
+                                string="Confirm"
+                                groups="estate.group_assistant"
+                                attrs="{'invisible': [('state','!=','draft')]}"
+                                class="oe_highlight"/>
+                        <button name="button_approve" type="workflow"
+                                string="Approve"
+                                attrs="{'invisible': ['|',('state','!=','confirmed'),('validation_confirm','not in',True)]}"
+                                groups="estate.group_assistant"
+                                class="oe_highlight"/>
+                      	<button name="button_reject" type="workflow"
+                                string="Reject"
+                                attrs="{'invisible': ['|',('state','!=','confirmed'), ('validation_confirm','not in',True)]}"
+                                groups="estate.group_assistant"
+                                class="oe_highlight"/>
                         <field name="state" widget="statusbar"
                                statusbar_visible="draft,confirmed,approved,rejected"/>
                     </header>
@@ -104,6 +123,7 @@
                                 <field name="approver_id" options="{'no_create_edit': True}"
                                         attrs="{'readonly': [('state','not in',('draft','confirmed'))]}"/>
                                 <field name="max_day" invisible="True"/>
+                                <field name="validation_confirm" readonly="True" invisible="True"/>
                             </group>
                             <group name="division_information">
                                 <field name="company_id" options="{'no_create_edit': True}"
@@ -151,7 +171,7 @@
             <field name="name">Harvest</field>
             <field name="res_model">estate.ffb</field>
             <field name="view_mode">tree,form</field>
-            <field name="context">{'search_default_filter_new': 1}</field>
+            <field name="context">{'search_default_filter_new': 0}</field>
         </record>
 
         <menuitem id="estate_harvest_menu" name="Harvest"
@@ -162,6 +182,7 @@
         <menuitem id="estate_ffb" name="Daily Harvest"
                   parent="estate_harvest_menu"
                   action="action_list_ffb"
+                  sequence="20"
                   groups="estate_ffb.group_ffb_user" />
     </data>
 </openerp>
