--- a/estate_payrollffb/views/estate_payrollffb_views.xml
+++ b/estate_payrollffb/views/estate_payrollffb_views.xml
@@ -77,16 +77,33 @@
             <field name="arch" type="xml">
                 <form string="Daily Payroll FFB">
                     <header>
-                        <button class="oe_highlight" name="action_sync" string="Sync"
-                                type="object" states="draft" groups="estate.group_assistant"/>
-                        <button class="oe_highlight" name="button_confirmed" string="Confirmed"
-                                type="object" states="draft" groups="estate.group_assistant"/>
-                        <button class="oe_highlight" name="button_approved" string="Approved"
-                                type="object" states="confirmed" groups="estate.group_manager"/>
-                      	<button class="oe_highlight" name="button_rejected" string="Rejected"
-                                type="object" states="confirmed" groups="estate.group_assistant"/>
+                        <button name="action_sync" string="Sync" type="object"
+                                groups="estate.group_assistant" icon="fa-refresh"
+                                class="oe_highlight"/>
+                        <button name="button_redraft" string="Redraft" type="workflow"
+                                groups="estate.group_manager"
+                                class="oe_highlight" states="approved"/>
+                        <button name="button_confirm" string="Confirm" type="workflow"
+                                groups="estate.group_assistant"
+                                attrs="{'invisible': ['|',('state','!=','draft'), ('validation_confirm','not in',True)]}"
+                                class="oe_highlight"/>
+                        <button name="button_approve" string="Approve" type="workflow"
+                                groups="estate.group_assistant"
+                                attrs="{'invisible': ['|',('state','!=','confirmed'), ('validation_confirm','not in',True)]}"
+                                class="oe_highlight"/>
+                        <button name="button_approve_mgr" string="Approve" type="workflow"
+                                groups="estate.group_manager"
+                                attrs="{'invisible': [('state','!=','estate_mgr_approved')]}"
+                                class="oe_highlight"/>
+                        <button name="button_reject" string="Reject" type="workflow"
+                                groups="estate.group_manager"
+                                class="oe_highlight" states="estate_mgr_approved"/>
+                      	<button name="button_revert" string="Revert" type="workflow"
+                                groups="estate.group_manager"
+                                attrs="{'invisible': [('state','=','draft')]}"
+                                class="oe_highlight"/>
                         <field name="state" widget="statusbar"
-                               statusbar_visible="draft,agr_asst_approved,agr_head_approved,estate_mgr_approved,approved"/>
+                               statusbar_visible="draft,confirmed,agr_asst_approved,agr_head_approved,estate_mgr_approved,approved"/>
                     </header>
                     <sheet string="Daily Payroll FFB">
                         <div class="oe_button_box" name="button_box">
@@ -122,6 +139,7 @@
                                 <field name="team_id" string="Team" options="{'no_create_edit': True}"
                                        attrs="{'readonly': [('state','not in',('draft','confirmed'))]}"/>
                                 <field name="approver_id" options="{'no_create_edit': True}" readonly="True"/>
+                                <field name="validation_confirm" readonly="True" invisible="False"/>
                             </group>
                             <group name="division_information">
                                 <field name="company_id" options="{'no_create_edit': True}"
@@ -167,12 +185,13 @@
             <field name="name">Daily Payroll FFB Labour</field>
             <field name="res_model">estate.payrollffb</field>
             <field name="view_mode">tree,form</field>
-            <field name="context">{'search_default_filter_new': 1}</field>
+            <field name="context">{'search_default_filter_new': 0}</field>
         </record>
 
         <menuitem id="estate_payrollffb" name="Daily Payroll FFB Labour"
                   parent="estate_ffb.estate_harvest_menu"
                   action="action_list_payrollffb"
+                  sequence="21"
                   groups="estate_ffb.group_ffb_user"/>
     </data>
 </openerp>
